    and push.
  * remotedaemon: Use the ssh-options git config.
  * Linux standalone: Improved process names of linker shimmed programs.
  * fsck: Incremental fsck uses sqlite to store its records, instead
    of abusing the sticky bit. Existing sticky bits are ignored,
    incremental fscks started by old versions won't be resumed by
    this version.

 -- Joey Hess <id@joeyh.name>  Fri, 06 Feb 2015 13:57:08 -0400

git-annex (5.20150205) unstable; urgency=medium

  * info: Can now display info about a given uuid.
  * Added to remote/uuid info: Count of the number of keys present
    on the remote, and their size. This is rather expensive to calculate,
    so comes last and --fast will disable it.
  * info remote: Include the date of the last sync with the remote.
  * sync: Added --message/-m option like git commit.
  * remotedaemon: Fix problem that could prevent ssh connections being
    made after two LOSTNET messages were received in a row (perhaps due to
    two different network interfaces being brought down).
  * Fix build failure when wget is not installed.
  * Fix wording of message displayed when unable to get a file that
    is available in untrusted repositories.
  * addurl: When a Content-Disposition header suggests a filename to use,
    addurl will consider using it, if it's reasonable and doesn't conflict
    with an existing file. (--file overrides this)
  * Fix default repository description created by git annex init,
    which got broken by the relative path changes in the last release.
  * init: Repository tuning parameters can now be passed when initializing a
    repository for the first time. For details, see
    http://git-annex.branchable.com/tuning/
  * merge: Refuse to merge changes from a git-annex branch of a repo
    that has been tuned in incompatible ways.
  * Support annex.tune.objecthash1, annex.tune.objecthashlower, and
    annex.tune.branchhash1.
  * Remove support for building without cryptohash.
  * Added MD5 and MD5E backends.